--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
     - secure: "c3gMioUuhU2iiqmV0jx+mig20j0Fu/MLy/h9OCDQfsMi1PqH1woNospBPhvwjQgTm1Wk7ciC8vmYfc9oHVw5rejjKMAgPTgft3NsTXBXoJ4B1RAWFAm5Fg6ERCwxBC+F61HOroye5QbMI5mhdUNp4rrT4e17VqHcNzyuUrolqdw="
     - secure: "oGZioPdpRRO6ucL0E26h5wD2+Fyhnnb+l87c0C9KzHvGA+3sndf4ikO1YQ4bKw810VwjwL58BViHNk1IGUP/QKatSdEyETyHC/jqDp/6U73wmy7V7XWR0NBu90yOoOlV0/m69j4h/3jdD3PY0Fhcuh0l+4LIrOK4Oh93fJpl3sM="
 
-script: "sbt ++$TRAVIS_SCALA_VERSION clean test"
+script: "sbt clean test"
 
-after_success: "sbt publish"
+after_success:
+  - "[[ $TRAVIS_BRANCH == \"master\" ]] && { sbt publish; };"
