--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ env:
 script: "sbt clean test"
 
 after_success:
-  - "[[ $TRAVIS_BRANCH == \"master\" ]] && { sbt publish; };"
+  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && sbt publish
